<resources>
    <string name="app_name">BuckeyeMarket</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="drawer_opened">Opened Drawer</string>
    <string name="drawer_closed">Closed Drawer</string>
    <string-array name="languages">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>VisualBasic</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="removeacc">RemoveAcc</string>
    <string name="setting">Setting</string>
    <string name="name">Name :</string>
    <string name="venmo_id">Venmo ID :</string>
    <string name="email">Email :</string>
    <string name="edit">Edit</string>
    <string name="buckeye_market">Buckeye Market</string>
</resources>
